# ai-party-planner

./: .gitignore  README.md
backend/: app.py  pyproject.toml  requirements.txt
backend/agents/: activity_specialist.py  food_specialist.py  party_director.py  theme_specialist.py
backend/models/: party_request.py
backend/tools/: time_calculator.py
frontend/: package.json
frontend/app/: layout.tsx  page.tsx
frontend/components/: party-form.tsx  party-plan-result.tsx
frontend/types/: party.ts
