[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.14",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "strands-agents>=0.1.9",
    "strands-agents-tools>=0.1.7",
    "uvicorn>=0.35.0",
]
